# ProperImage

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  __init__.py  ez_setup.py  propercoadd.py  pyproject.toml  requirements.txt  setup.py  single_image2.py  test_proper_coadd.py  test_psf_measure.py  test_real_coadd.py  test_realimage.py  test_recover_stats.py  test_variablepsf.py  tox.ini
.github/workflows/: CI.yml  github-action-python-ci.yml  hercules.yml  python-app.yml  python-properimage-ci.yml  testing.yml
data/: aligned_eso085-030-004.fit  aligned_eso085-030-005.fit
dev_test/: test_psf_measure.py  test_real_coadd.py  test_recover_stats.py  test_variablepsf.py
dev_test/test_images/one_star/: imagelist.txt
docs/: Makefile  make.bat  requirements_docs.txt
docs/legacy/: Fourier.ipynb  PSF.ipynb  PhotometricCalibration.ipynb  Tutorial02.ipynb
docs/source/: api.rst  conf.py  glossary.rst  index.rst  subs.py  tutorial.rst
docs/source/_static/: placeholder
docs/source/topics/: Fourier.ipynb  PSF.ipynb  PhotometricCalibration.ipynb  index.rst
docs/source/tutorial/: Tutorial01.ipynb  Tutorial02.ipynb  Tutorial03.ipynb  Tutorial04.ipynb  Tutorial05.ipynb  index.rst  tuto01.rst
drafts/: imagelist_coadd.py  rebuild_frame.py  test_fourierR.py  test_matching.py  test_proper_coadd.py  test_propercoad.py  test_propersubtract.py  test_psf_measure.py  test_recover_stats.py  test_simulated_psfs.py  test_sniptf.py  test_subtract_sniptf.py  test_variablepsf.py  test_varpsf_coadd.py  test_zpoint.py
examples/: BASELINE_METRICS.md  FFT_CACHE_RESULTS.md  PROFILING.md
imsim/: simtools.py
propercoadd/: __init__.py  propercoadd.py
properimage/: __init__.py  combinator.py  image_ensemble.py  image_stats.py  numpydb.py  operations.py  plot.py  profiling.py  propercoadd.py  propersubtract.py  propersubtract2.py  simtools.py  single_image.py  single_image2.py  single_image_psfs.py  utils.py
properimage/tests/: __init__.py  core.py  run.py  simtools.py  test_combinator.py  test_plot.py  test_propercoadd.py  test_propersubtract.py  test_simtools.py  test_single_image.py  test_utils.py
properimage/tplibs/: __init__.py  numpydb.py
test/: __init__.py  imagelist_coadd.py  rebuild_frame.py  test_fourierR.py  test_matching.py  test_proper_coadd.py  test_propercoad.py  test_propersubtract.py  test_psf_measure.py  test_real_coadd.py  test_realimage.py  test_simtools.py  test_simulated_psfs.py  test_sniptf.py  test_subtract_sniptf.py  test_variablepsf.py  test_varpsf_coadd.py  test_zpoint.py
tests/: __init__.py  conftest.py  core.py  simtools.py  test_combinator.py  test_ensemble.py  test_plot.py  test_propercoadd.py  test_propersubtract.py  test_simtools.py  test_single_image.py  test_utils.py
