
# =============================================================================
# BLACK
# =============================================================================

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312", "py313", "py314"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "properimage"
version = "0.7.1"
authors = [{name = "Bruno O. Sanchez & QuatroPe", email = "bsanchez@cppm.in2p3.fr"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
description = "Proper Astronomic Image Analysis"
keywords = [
    "astronomy",
    "image",
    "difference",
    "transient",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://properimage.readthedocs.io/en/latest/", Repository = "https://github.com/quatrope/properimage" }
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "sep",
    "astroscrappy>=1.0.5",
    "astroalign>=1.0.3",
    "tinynpydb>=0.1",
    "pyFFTW>=0.12",
    "joblib",
    "attrs",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["properimage", "properimage.*"]
namespaces = false